2008-08-03  Zhang Junbo  <zhangjb@svn.gnome.org>

	add the document "frequency-domain-process-manual"

	* docs/frequency-domain-process-manual.txt: add a document.

2008-08-03  Zhang Junbo  <zhangjb@svn.gnome.org>

	implemented gaussian band pass filter

	* operations/frequency/bandpass-gaussian.c: implemented gaussian band pass filter
	* operations/frequency/tools/filters.c: add gaussian band pass filter function

2008-08-03  Zhang Junbo  <zhangjb@svn.gnome.org>

	implemented gaussian high pass filter.

	* operations/frequency/highpass-gaussian.c: implemented gaussain high pass filter
	* operations/frequency/tools/filters.c: add gaussain high pass filter function

2008-08-02  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/tools/filters.c (freq_multiply): modified the freq_multiply algorithm

2008-08-02  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/tools/filters.c: fixed a bug of freq_multiply

2008-08-02  Zhang Junbo  <zhangjb@svn.gnome.org>

	add an example of GLPF 

	* examples/glpf_save.c: an example of GLPF save file
	* examples/glpf_show.c: an example of GLPF preview
	* operations/frequency/homo-dft.c:  fixed a bug of set output buffer
	* operations/frequency/homo-idft.c: fixed a bug of get input buffer
	* operations/frequency/tools/filters.c: a small optimization

2008-08-01  Zhang Junbo  <zhangjb@svn.gnome.org>

	  Complete the gaussian lowpass filter

	* operations/frequency/lowpass-gaussian.c: finished this operation
	* operations/frequency/tools/filters.c: effience optimized

2008-08-01  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/lowpass-gaussian.c: unfinished. commented all the code.

2008-08-01  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/dft.c:
	* operations/frequency/freq-general-filter.c:
	* operations/frequency/idft.c:
	* operations/frequency/tools/component.c:
	* operations/frequency/tools/filters.c: removed some unused code
	* operations/frequency/tools/fourier.c:
